desktopdir = @XFCE_MENU_DATA_DIR@
desktop_DATA = \
	about-xfce.desktop \
	file-manager.desktop \
	help.desktop \
	logout.desktop \
	run-program.desktop \
	terminal.desktop \
	web-browser.desktop

menudir = $(sysconfdir)/xdg/menus
menu_DATA = xfce-applications.menu

EXTRA_DIST = $(desktop_DATA) $(menu_DATA).in
