desktopdir = $(datadir)/applications
desktop_DATA = \
	xfce4-about-xfce.desktop \
	xfce4-file-manager.desktop \
	xfce4-help.desktop \
	xfce4-logout.desktop \
	xfce4-run-program.desktop \
	xfce4-terminal.desktop \
	xfce4-web-browser.desktop

menudir = $(sysconfdir)/xdg/menus
menu_DATA = xfce-applications.menu

EXTRA_DIST = $(desktop_DATA) $(menu_DATA)
